<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pory dnia</string>
    <string name="font_name">Roboto-Regular.ttf</string>
    
    <string name="show_all">Wszystkie</string>
    <string name="show_favourites_only">Ulubione</string>
    <string name="menu_search">Szukaj</string>
    <string name="empty">Brak elementów do wyświetlenia</string>
    
    <string name="set_as_main">Ustaw jako główne</string>
    <string name="add_to_favourites">Dodaj do ulubionych</string>
    <string name="remove_from_favourites">Usuń z ulubionych</string>
    
    <string name="winter">Zima</string>
    <string name="autumn">Jesień</string>
    <string name="spring">Wiosna</string>
    <string name="summer">Lato</string>
    
    <!-- Notification -->
    <string name="error_during_restoring_state_title">Problem</string>
    <string name="error_during_restoring_state_msg">Wystąpił problem w trakcie inicjowania listy. Spróbuj jeszcze raz...</string>
    <string name="error_during_restoring_state_ticker">Reinicjalizacja nie powiodła się</string>
    
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_list">List</string>
    <string name="menu_share">Share</string>
    
    <string name="dashboard_my_place">Moje miejsce</string>
    <string name="dashboard_favorites">Ulubione</string>
    <string name="dashboard_locations">Lokalizacje</string>
    <string name="dashboard_settings">Ustawienia</string>
    <string name="place">Miejsce</string>
    
    <string name="favorites_title">@string/dashboard_favorites</string>
    <string name="locations_title">@string/dashboard_locations</string>
    
    <string name="init_list_message">lub wybierz z listy</string>
    <string name="init_list_get_gps">Pobierz lokalizacje GPS</string>
    <string name="init_progress_message">Instalacja...</string>
    
    <!-- Search -->
    <string name="search_hint">Wyszukaj miejsce</string>
    <string name="search_suggest_locations_path">quick_search_locations</string>
    <string name="search_suggest_favorites_path">quick_search_favorites</string>
    
    <!-- Preference -->
    <string name="preferences_counting_title">Obliczenia</string>
    <string name="preferences_counting_key">preferences_counting</string>
    
    <string name="preferences_sun_altitude_title">Wysokość Słońca</string>
    <string name="preferences_sun_altitude_summary">Okreść wysokość Słońca dla zmierzchu</string>
    <string name="preferences_sun_altitude_key">preferences_sun_altitude</string>
    <string name="preferences_sun_altitude_default_value">@string/preferences_sun_altitude_values_1</string>
    
    <string name="preferences_sun_altitude_entries_1">Oficjalna</string>
    <string name="preferences_sun_altitude_entries_2">Zmierzch cywilny</string>
    <string name="preferences_sun_altitude_entries_3">Zmierzch żeglarski</string>
    <string name="preferences_sun_altitude_entries_4">Zmierzch astronomiczny</string>
    
    <string name="preferences_sun_altitude_values_1">OFFICIAL</string>
    <string name="preferences_sun_altitude_values_2">CIVIL</string>
    <string name="preferences_sun_altitude_values_3">NAUTICAL</string>
    <string name="preferences_sun_altitude_values_4">ASTRONOMICAL</string>
    
    <string name="preferences_visualization_title">Wizualizacja</string>
    <string name="preferences_visualization_key">preferences_visualization</string>
    
    <string name="preferences_presentation_view_key">preferences_presentation_view</string>
    <string name="preferences_presentation_view_title">Sposób prezentacji</string>
    <string name="preferences_presentation_view_summary">Wybierz jak mają być prezentowane dane</string>
    <string name="preferences_presentation_view_default_value">@string/preferences_presentation_values_1</string>
    
    <string name="preferences_presentation_entries_1">Tablica</string>
    <string name="preferences_presentation_entries_2">Zegar</string>
    <string name="preferences_presentation_entries_3">Linia czasu</string>
    
    <string name="preferences_presentation_values_1">TABLE</string>
    <string name="preferences_presentation_values_2">CLOCK</string>
    <string name="preferences_presentation_values_3">TIME_LINE</string>
    
</resources>
