<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
		android:key="@string/preferences_counting_key"
		android:title="@string/preferences_counting_title">
		
		<ListPreference
		    android:key="@string/preferences_sun_altitude_key"
		    android:title="@string/preferences_sun_altitude_title"
		    android:summary="@string/preferences_sun_altitude_summary"
			android:defaultValue="@string/preferences_sun_altitude_default_value"
			android:entries="@array/preferences_sun_altitude_entries"
			android:entryValues="@array/preferences_sun_altitude_values" />
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:key="@string/preferences_visualization_key"
		android:title="@string/preferences_visualization_title">
		
		<ListPreference
		    android:key="@string/preferences_presentation_view_key"
		    android:title="@string/preferences_presentation_view_title"
		    android:summary="@string/preferences_presentation_view_summary"
			android:defaultValue="@string/preferences_presentation_view_default_value"
			android:entries="@array/preferences_presentation_view_entries"
			android:entryValues="@array/preferences_presentation_view_values" />
		
	</PreferenceCategory>
	
</PreferenceScreen>
