<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/gpsButton"
        android:layout_width="220dp"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/text_dark"
        android:text="@string/init_list_get_gps" />
    
    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_dark"
        android:text="@string/init_list_message" />

    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="@drawable/background_with_border"
    	android:padding="1dp"
    	android:orientation="vertical" >
    
	    <ListView
	        android:id="@android:id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:divider="@color/gray_light"
	        android:dividerHeight="1dip"
	        android:fastScrollEnabled="true" />
	
	    <TextView
	        android:id="@android:id/empty"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="@string/empty"
	        android:textColor="@color/text_dark"
	        android:textSize="@dimen/normal_text_size" />

    </LinearLayout>
    
</LinearLayout>